--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "ng2-date-picker": "^2.6.2",
+    "ng2-datepicker": "^2.1.3",
+    "ngx-loading": "^1.0.8",
     "ngx-pagination": "^3.0.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
